Async file uploading to S3 working

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,9 @@
 /*
  *= require_self
+ *= require circle.player
+ *= require mp3-player-button
  */
 
 @import "bootstrap";
+@import "font-awesome";
+@import "custom";
