--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,6 +16,17 @@ body
         li
           = link_to "Sets", song_sets_url
       ul.nav.pull-right
+        - if current_user
+          li
+            p.navbar-text
+              | Logged in as #{current_user.username}
+          li
+            = link_to "Logout", :logout
+        - else
+          li
+            = link_to "Register", new_user_path
+          li
+            = link_to "Login", :login
         /li
           - if current_song_set
             p.navbar-text
@@ -24,8 +35,6 @@ body
                 = link_to " #{current_song_set.name}", current_song_set
                 = link_to current_song_set do
                    i.icon-remove-circle
-        li
-          a Log Out
   div.container
     div.row
       div.span12
