--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,2 +1,19 @@
-h1 Users#new
-p Find me in app/views/users/new.html.slim
+h1 Sign Up
+= form_for @user do |f|
+  - if @user.errors.any?
+    div.error_messages
+      h2 Form is invalid
+      ul
+         - @user.errors.full_messages.each do |message|
+           li= message
+  div.field
+    = f.label :username
+    = f.text_field :username
+  div.field
+    = f.label :password
+    = f.password_field :password
+  div.field
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
+  div.actions
+    = f.submit 'Register', class: 'btn'
