--- a/app/views/song_sets/show.html.slim
+++ b/app/views/song_sets/show.html.slim
@@ -1,12 +1,25 @@
-h1= @song_set.name
+h1
+  = link_to 'Edit Set', edit_song_set_path(@song_set), class: 'btn pull-right'
+  = @song_set.name
+h3.muted
+  - if @song_set.play_on > Time.zone.today
+    | Will play in #{time_ago_in_words(@song_set.play_on)}.
+  - else
+    | Played #{time_ago_in_words(@song_set.play_on)} ago
 
 h3 Songs
 
-table.table
+table.table.table-bordered.table-striped
   thead
     tr
       th Song Name
+      th Last Played
+  tbody
     - @song_set.songs.each do |song|
       tr
-        td
-          = link_to song.name, song
+        td= link_to song.name, song
+        td= time_ago_in_words(song.last_played)
+
+div.pull-right
+  = link_to "Finalize Set", "#", class: 'btn btn-success'
+  = link_to "Delete", song_set_path(@song_set), method: :delete, class: 'btn btn-danger', confirm: "Are you sure?"
