--- a/app/views/song_sets/_form.html.slim
+++ b/app/views/song_sets/_form.html.slim
@@ -6,5 +6,8 @@
   div.field
     = f.label :name
     = f.text_field :name
+  div.field
+    = f.label :play_on
+    = f.text_field :play_on, class: :datepicker
   div.actions
     = f.submit :class => 'btn'
