Finished basic Sets functionality and dashboard

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,3 +28,13 @@ i {
 .btn {
   margin-right: 5px;
 }
+
+.inline {
+  display: inline;
+}
+
+.small-logo {
+  width: 20px;
+  vertical-align: top;
+  margin-right: 5px;
+}
