--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -9,11 +9,12 @@ div.uploadSection
 
 h3 Attachments
 
-= form_for([@song, Attachment.new], html: { class:'form-inline'}) do |f|
-  fieldset
-    div.input-append
-      = f.text_field :url, placeholder: 'Add Attachment from URL', class: 'input-xxlarge'
-      = f.submit 'Add Attachment', class: 'btn'
+- if current_user.worship_leader?
+  = form_for([@song, Attachment.new], html: { class:'form-inline'}) do |f|
+    fieldset
+      div.input-append
+        = f.text_field :url, placeholder: 'Add Attachment from URL', class: 'input-xxlarge'
+        = f.submit 'Add Attachment', class: 'btn'
 
 table.table.table-bordered.table-striped
   thead
@@ -33,8 +34,6 @@ table.table.table-bordered.table-striped
             = link_to song_attachment_path(@song), method: :delete, class: 'btn btn-danger btn-mini', confirm: "Are you sure?" do
               i.icon-remove-circle
               |  Delete
-
-
 
 = javascript_include_tag 'uploader'
 
