--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -35,19 +35,20 @@ table.table.table-bordered.table-striped
               i.icon-remove-circle
               |  Delete
 
-= javascript_include_tag 'uploader'
+- content_for :load_last do
+  = javascript_include_tag 'uploader'
 
-script id="attachment" type="text/x-handlebars-template"
-  tr
-    td
-      = link_to "{{fileName}}", "{{fileUrl}}"
-    td {{fileType}}
+  script id="attachment" type="text/x-handlebars-template"
+    tr
+      td
+        = link_to "{{fileName}}", "{{fileUrl}}"
+      td {{fileType}}
 
-script id="progressBar" type="text/x-handlebars-template"
-  div.row
-    div.span3
-      | Uploading
-      strong= " {{name}}"
-    div.span9
-      div class="progress"
-        div class="bar" style="width: 0%;"
+  script id="progressBar" type="text/x-handlebars-template"
+    div.row
+      div.span3
+        | Uploading
+        strong= " {{name}}"
+      div.span9
+        div class="progress"
+          div class="bar" style="width: 0%;"
