--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,3 +38,11 @@ i {
   vertical-align: top;
   margin-right: 5px;
 }
+
+.container {
+  background: white;
+  opacity: 0.9;
+  padding: 10px;
+  border-radius: 15px;
+  margin-top: 10px;
+}
