--- a/app/views/song_sets/show.html.slim
+++ b/app/views/song_sets/show.html.slim
@@ -24,3 +24,7 @@ div.pull-right
       = f.hidden_field :finalized, value: true
       = f.submit "Finalize Set",  class: 'btn btn-success'
   = link_to "Delete", song_set_path(@song_set), method: :delete, class: 'btn btn-danger', confirm: "Are you sure?"
+
+- if current_user.worship_leader?
+  - content_for :load_last do
+    = javascript_include_tag 'sets'
