--- a/app/views/application/_song_table.html.slim
+++ b/app/views/application/_song_table.html.slim
@@ -8,20 +8,21 @@ table.table.table-hover.table-bordered.table-striped
       th MP3
       th Chord Sheet
   tbody
+    - current_songs = current_song_set.songs.to_a if current_song_set
     - songs.each do |song|
       tr
         - if current_song_set
           td
-            - unless current_song_set.songs.include?(song)
+            - unless current_songs.include?(song)
               = link_to song_add_to_set_path(song) do
                 i.icon-plus title="Add to current set"
         td= link_to song.name, song
-        td= last_played_in_words(song.last_played)
+        td= last_played_in_words(song.last_played_on)
         td
-          - if song.has_mp3?
+          - if song.latest_mp3
             i.icon-cloud-download
             = link_to song.latest_mp3.filename, song.latest_mp3.url
         td
-          - if song.has_sheetmusic?
+          - if song.latest_sheet_music
             i.icon-cloud-download
-            = link_to song.latest_sheetmusic.filename, song.latest_sheetmusic.url
+            = link_to song.latest_sheet_music.filename, song.latest_sheet_music.url
