--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,6 +1,6 @@
 - if @latest_set
   h3.muted Here are the songs you're playing on #{@latest_set.play_on.to_s}:
-  = render 'song_table', songs: @latest_set.song_sets_songs.set_order.map(&:song)
+  = render 'song_table', songs: @latest_set.songs
 - else
   h3.muted
     | You don't have any upcomming sets.
