Add sorting to song list

--- a/app/views/application/_song_table.html.slim
+++ b/app/views/application/_song_table.html.slim
@@ -1,4 +1,4 @@
-table.table.table-hover.table-bordered.table-striped
+table#song-table.table.table-hover.table-bordered.table-striped
   thead
     tr
       th Name
