--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,3 +94,41 @@ table .headerSortUp:after {
   -moz-opacity: 0.6;
   opacity: 0.6;
 }
+
+.set-date {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.attachment i{
+  margin-right: 10px;
+}
+
+.song-set {
+  margin-bottom: 20px;
+}
+
+.song-title {
+  padding-left: 10px;
+  font-size: 1.5em;
+}
+
+.lead-by {
+  color: #999;
+  margin-left: 10px;
+}
+
+.set-list {
+  border-left: 3px solid #999;
+  margin-left: -3px;
+}
+
+.song-row {
+  margin-bottom: 5px;
+}
+
+.page-header {
+  padding-bottom: 5px;
+  margin: 5px 0;
+  border-bottom: 1px solid #999;
+}
