--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,6 +1,28 @@
+h3.page-header Upcomming Sets
+.row
+  .offset6.span2 MP3
+  .span2 PDF
 - @upcoming_sets.each do |set|
-  h3.muted Here are the songs you're playing on #{set.play_on.to_s}:
-  = render 'song_table', songs: set.songs
+  .row.song-set
+    .set-date.span2
+      = set.play_on.to_s
+    .span10.set-list
+      - set.songs_in_set_order.each_with_index do |song_sets_song, index|
+        - song = song_sets_song.song
+        div.row.song-row
+          .span4
+            span.song-title #{index + 1}. #{song.name}
+            span.lead-by lead by #{song_sets_song.lead_by}
+          .span2
+            - if song.latest_mp3
+              span.attachment
+                i.icon-music
+                = link_to song.latest_mp3.filename, song.latest_mp3.url
+          .span2
+            - if song.latest_sheet_music
+              span.attachment
+                i.icon-print
+                = link_to song.latest_sheet_music.filename, song.latest_sheet_music.url
 - if @upcoming_sets.count == 0
   h3.muted
     | You don't have any upcomming sets.
