--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,9 +95,20 @@ table .headerSortUp:after {
   opacity: 0.6;
 }
 
-.set-date {
+.set-name {
   font-size: 1.5em;
+  line-height: 1.5em;
   font-weight: bold;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.set-date {
+  margin-top: -7px;
+  font-weight: bold;
+  color: #999;
+  text-align: right;
+  padding-right: 10px;
 }
 
 .attachment {
@@ -130,10 +141,4 @@ table .headerSortUp:after {
 
 .song-row {
   margin-bottom: 5px;
-}
-
-.page-header {
-  padding-bottom: 5px;
-  margin: 5px 0;
-  border-bottom: 1px solid #999;
 }
