--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,8 +1,9 @@
 h3.page-header Upcomming Sets
 - @upcoming_sets.each do |set|
   .row.song-set
-    .set-date.span2
-      = set.play_on.to_s
+    .span2
+      .set-name= set.name
+      .set-date= set.play_on.to_s
     .span10.set-list
       - set.songs_in_set_order.each_with_index do |song_sets_song, index|
         - song = song_sets_song.song
