--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,11 +112,8 @@ table .headerSortUp:after {
 }
 
 .attachment {
+  font-size: 2em;
   margin-left: 13px;
-  text-decoration: underline;
-  i{
-    text-decoration: none;
-  }
 }
 
 .song-set {
@@ -124,21 +121,27 @@ table .headerSortUp:after {
 }
 
 .song-title {
-  padding-left: 10px;
   font-size: 1.5em;
   line-height: 1.7em;
 }
 
 .lead-by {
   color: #999;
-  margin-left: 3px;
 }
 
-.set-list {
-  border-left: 3px solid #999;
-  margin-left: -3px;
+.lead-by-phone {
+  margin-left: 13px;
+  margin-top: -8px;
 }
 
 .song-row {
   margin-bottom: 5px;
+}
+
+.right-align {
+  text-align: right;
+}
+
+body {
+  background: url('background.png') repeat;
 }
