--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,28 +9,30 @@ html
   body
     div.navbar.navbar-static-top
       div.navbar-inner
-        = link_to root_url, :class => 'brand' do
-          = image_tag 'TVMCLogo.png', class: 'small-logo'
-          | TV Methodist Worship Database
-        - if current_user
-          ul.nav
-            li
-              = link_to "Songs", songs_url
-            - if current_user.worship_leader?
-              li
-                = link_to "Sets", song_sets_url
-              li
-                = link_to "Users", users_url
-          ul.nav.pull-right
+        div.container
+          a.btn.btn-navbar data-toggle="collapse" data-target=".nav-collapse"
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          = link_to root_url, :class => 'brand' do
+            | Worship Database
+          div.nav-collapse.collapse
             - if current_user
-              li
-                p.navbar-text
-                  | Logged in as #{current_user.username}
-              li
-                = link_to "Logout", :logout
-            - else
-              li
-                = link_to "Login", :login
+              ul.nav
+                li
+                  = link_to "Songs", songs_url
+                - if current_user.worship_leader?
+                  li
+                    = link_to "Sets", song_sets_url
+                  li
+                    = link_to "Users", users_url
+              ul.nav.pull-right
+                - if current_user
+                  li
+                    = link_to "Logout", :logout
+                - else
+                  li
+                    = link_to "Login", :login
     div.container
       div.row
         - if flash[:error]
