--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,53 +95,103 @@ table .headerSortUp:after {
   opacity: 0.6;
 }
 
-.set-name {
-  font-size: 1.5em;
-  line-height: 1.5em;
-  font-weight: bold;
-  text-align: right;
-  padding-right: 10px;
-}
-
-.set-date {
-  margin-top: -7px;
-  font-weight: bold;
-  color: #999;
-  text-align: right;
-  padding-right: 10px;
-}
-
-.attachment {
-  font-size: 2em;
-  margin-left: 13px;
-}
-
-.song-set {
-  margin-bottom: 20px;
-}
-
-.song-title {
-  font-size: 1.5em;
-  line-height: 1.7em;
-}
-
-.lead-by {
-  color: #999;
-}
-
-.lead-by-phone {
-  margin-left: 13px;
-  margin-top: -8px;
-}
-
-.song-row {
-  margin-bottom: 5px;
-}
-
-.right-align {
-  text-align: right;
-}
-
 body {
   background: url('background.png') repeat;
 }
+.set-list {
+  background: white;
+  border: 1px solid #ddd;
+  padding: 10px;
+  box-shadow: 1px 1px 5px -1px #404040;
+}
+
+.set-header {
+  margin-left: 20px;
+  border-bottom: 1px solid #999999;
+  padding: 5px 3px;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.set-name {
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.set-date {
+  font-weight: bold;
+  font-size: 1.3em;
+  color: #999;
+}
+
+.song-header {
+  padding-left: 3px;
+}
+.song-name {
+  font-weight: bold;
+  margin-left: 20px;
+  font-size: 1.3em;
+}
+
+@media (max-width: 979px) and (min-width: 768px) {
+  .set-header {
+    font-size: 1.5em;
+  }
+
+  .lead-by {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 1200px) {
+  .song-name {
+    margin-left: 30px;
+    font-size: 1.5em;
+  }
+
+  .set-header {
+    font-size: 1.5em;
+    margin-left: 30px;
+  }
+
+  .lead-by {
+    font-size: 1.2em;
+  }
+}
+
+@media (max-width: 767px) {
+  .song-name {
+    margin-left: 0;
+    font-size: 1em;
+  }
+
+  .set-header {
+    margin-left: 0;
+  }
+}
+
+
+.attachment-container {
+  max-width: 200px;
+  margin: auto;
+}
+
+.attachment {
+  font-weight: lighter;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.lead-by {
+  font-weight: lighter;
+  color: #999;
+}
+
+.lead-by-inline {
+  font-weight: lighter;
+  color: #999;
+  margin-left: 10px;
+}
+
