test auto deploys

--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -39,3 +39,5 @@ h1 Upcoming Sets
 - if @upcoming_sets.count == 0
   h3.muted
     | You don't have any upcomming sets.
+
+h5 Auto Deploys now working!
