--- a/app/views/song_sets/index.html.slim
+++ b/app/views/song_sets/index.html.slim
@@ -1,3 +1,5 @@
+p.pull-right.h1-buttons
+  = link_to 'Create New Set', new_song_set_path, class: 'btn'
 h1 Sets
 
 table.table.table-hover.table-bordered.table-striped
@@ -12,5 +14,3 @@ table.table.table-hover.table-bordered.table-striped
       td= set.play_on.to_s
       td= set.songs.count
       td= link_to "Delete", song_set_path(set), method: :delete, class: 'btn btn-danger btn-mini', confirm: "Are you sure?"
-
-= link_to 'Create New Set', new_song_set_path, class: 'btn'
