--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -1,4 +1,4 @@
+p.pull-right.h1-buttons
+  = link_to 'Add Song', new_song_path, class: 'btn' if current_user.worship_leader?
 h1 Songs
 = render 'song_table', songs: @songs
-
-= link_to 'Add Song', new_song_path, class: 'btn' if current_user.worship_leader?
