--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,4 +7,8 @@
 @import "bootstrap-responsive";
 @import "font-awesome";
 @import "select2";
-@import "custom";
+@import "metro";
+@import "style";
+@import "login";
+@import "dashboard";
+@import "songs";
