--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,41 +1,21 @@
-h1 Upcoming Sets
-- @upcoming_sets.each do |set|
-  .set-list
-    .row
-      .set-header
+h3.page-title Upcoming Sets
+.row-fluid
+  - @upcoming_sets.each do |set|
+    .set-list
+      h4.set-list-header
         span.set-name= set.name
         span.hidden-phone.pull-right.set-date= play_on_in_words(set.play_on)
         span.visible-phone.pull-right.set-date= set.play_on.to_s
-      .clearfix
-    - set.songs_in_set_order.each_with_index do |song_sets_song, index|
-      - song = song_sets_song.song
-      .song
-        .row
-          .song-header
-            span.song-name= "#{index + 1}. #{song.name}"
-            span.hidden-phone
-              span.lead-by-inline lead by #{song_sets_song.lead_by}
-              - if song.latest_mp3
-                = link_to song.latest_mp3.url do
-                  i.icon-music
-                  |  MP3
-              - if song.latest_sheet_music
-                = link_to song.latest_sheet_music.url do
-                  i.icon-print
-                  |  PDF
-        .row
-          .attachment-container.visible-phone
-            .lead-by.text-center lead by #{song_sets_song.lead_by}
+
+      - set.songs_in_set_order.each_with_index do |song_sets_song, index|
+        - song = song_sets_song.song
+        .song.blue
+          span.pull-right.song-attachments
             - if song.latest_mp3
-              span.attachment.pull-left
-                = link_to song.latest_mp3.url do
-                  i.icon-music
-                  |  MP3
+              = link_to song.latest_mp3.url do
+                i.icon-music
             - if song.latest_sheet_music
-              span.attachment.pull-right
-                = link_to song.latest_sheet_music.url do
-                  i.icon-print
-                  |  PDF
-- if @upcoming_sets.count == 0
-  h3.muted
-    | You don't have any upcomming sets.
+              = link_to song.latest_sheet_music.url do
+                i.icon-print
+          .song-name= "#{index + 1}. #{song.name}"
+          .lead-by.clear-fix lead by #{song_sets_song.lead_by}
