--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -1,4 +1,30 @@
-p.pull-right.h1-buttons
+.pull-right.page-buttons
   = link_to 'Add Song', new_song_path, class: 'btn' if current_user.worship_leader?
-h1 Songs
-= render 'song_table', songs: @songs
+h3.page-title Songs
+.song-list
+  - @songs.each do |song|
+    .song.green
+      .row-fluid
+        .pull-right.song-attachments
+          - if song.latest_mp3
+            = link_to song.latest_mp3.url do
+              i.icon-music
+          - if song.latest_sheet_music
+            = link_to song.latest_sheet_music.url do
+              i.icon-print
+        .span4.song-name= link_to song.name, song
+        .span4.song-info
+          .labeled-item.center.subdued
+            | Play Count
+            span= song.song_sets_songs.count
+          .labeled-item.subdued
+            | Last Played
+            span
+              - if song.last_played_on
+                =last_played_in_words(song.last_played_on)
+              - else
+                | Never
+        .span2.hidden-phone
+          .labeled-item.subdued
+            | Last Lead By
+            span= song.song_sets_songs.last.lead_by
