MembersForm accepts nested attributes and validates

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,8 @@
 @import "select2";
 @import "metro";
 @import "style";
+@import "forms";
+@import "colors";
 @import "login";
 @import "dashboard";
 @import "songs";
